Display "no attribute" message in edit popup when needed

--- a/src/components/gf3Edit/partials/editfeatureattrs.html
+++ b/src/components/gf3Edit/partials/editfeatureattrs.html
@@ -1,3 +1,8 @@
+<div ng-if="attributes.length === 0"
+     translate>
+  edit_feature_attributes_no_attr
+</div>
+
 <div class="form-group" ng-repeat="attr in attributes">
   <label for="layer-attr-{{ attr.name }}">{{ attr.name}}</label>
   <div ng-switch="attr.type">
