Signal non nillable attribute to the user when editing a feature

--- a/src/components/gf3Edit/style/editattrs.less
+++ b/src/components/gf3Edit/style/editattrs.less
@@ -11,3 +11,11 @@
     margin: 0;
   }
 }
+
+
+[gf3-edit-feature-attrs] {
+    label.required:after {
+      content: " *";
+      color: red;
+  }
+}
