--- a/src/components/gf3Edit/partials/editfeatureattrs.html
+++ b/src/components/gf3Edit/partials/editfeatureattrs.html
@@ -4,7 +4,10 @@
 </div>
 
 <div class="form-group" ng-repeat="attr in attributes">
-  <label for="layer-attr-{{ attr.name }}">{{ attr.name}}</label>
+  <label ng-class="{
+          'required': !attr.nillable,
+         }"
+         for="layer-attr-{{ attr.name }}">{{ attr.name}}</label>
   <div ng-switch="attr.type">
     <input ng-switch-when="int"
            id="layer-attr-{{ attr.name }}"
@@ -12,6 +15,7 @@
            ng-change="updateValue(attr.name)"
            ng-model="values[attr.name]"
            ng-model-options="{ debounce: 200 }"
+           ng-required="!attr.nillable"
            type="number"
            step="1" />
     <input ng-switch-when="decimal"
@@ -20,6 +24,7 @@
            ng-change="updateValue(attr.name)"
            ng-model="values[attr.name]"
            ng-model-options="{ debounce: 200 }"
+           ng-required="!attr.nillable"
            type="number"
            step="any" />
     <input ng-switch-default
@@ -28,6 +33,7 @@
            ng-change="updateValue(attr.name)"
            ng-model="values[attr.name]"
            ng-model-options="{ debounce: 200 }"
+           ng-required="!attr.nillable"
            type="text" />
   </div>
 </div>
