Can use WFS-T with server protected by Basic Auth for POST requests
- Add the gf3Auth module.
- Add the gf3Auth service: it is responsible for registering the
username and password and adding the Authorization header to the
relevant HTTP requests.
- Add the LoginDirective and gf3Login service to handle loging
- Update the EditDirective to use the login directive when a layer
requires authentication.
- Store the authRequired property in the layer.

--- a/src/components/gf3Edit/partials/edit.html
+++ b/src/components/gf3Edit/partials/edit.html
@@ -1,4 +1,11 @@
-<div>
+<div ng-if="authRequired && !isAuthenticated">
+  <div gf3-login
+       gf3-login-callback="loggedIn()"
+       gf3-login-type="'basic'"
+       gf3-auth-url="authUrl"></div>
+</div>
+
+<div ng-if="!authRequired || isAuthenticated">
   <p ng-if="message">{{ message }}</p>
   <p class="alert-danger"
      ng-repeat="error in saveErrors">{{ error }}</p>
