--- a/src/components/gf3Auth/partials/login.html
+++ b/src/components/gf3Auth/partials/login.html
@@ -11,7 +11,7 @@
         ng-submit="connect()">
     <div class="form-group required">
       <label class="control-label"
-             translate>username</label>
+             translate>auth_username</label>
       <input class="form-control"
              type="text"
              name="username"
@@ -20,7 +20,7 @@
     </div>
     <div class="form-group required">
       <label class="control-label"
-             translate>password</label>
+             translate>auth_password</label>
       <input class="form-control"
              type="password"
              name="password"
