Improve edition of float/double attributes
- Update angular to 1.5.11
- Use the ng-switch-when-separator to use the same field for decimal and
double

--- a/src/components/gf3Edit/partials/editfeatureattrs.html
+++ b/src/components/gf3Edit/partials/editfeatureattrs.html
@@ -18,7 +18,8 @@
            ng-required="!attr.nillable"
            type="number"
            step="1" />
-    <input ng-switch-when="decimal"
+    <input ng-switch-when="decimal|double"
+           ng-switch-when-separator="|"
            id="layer-attr-{{ attr.name }}"
            class="form-control"
            ng-change="updateValue(attr.name)"
